[gd_scene load_steps=12 format=3 uid="uid://xnr5fpijvdxe"]

[ext_resource type="Texture2D" uid="uid://bv8qqtvt0cnr" path="res://Art/bomb_circle_1.png" id="1_3jjvp"]
[ext_resource type="Script" path="res://Weapons/bomb.gd" id="1_i2atx"]
[ext_resource type="Texture2D" uid="uid://bkm2ff80ymn86" path="res://Art/bomb_circle_2.png" id="2_6tedn"]
[ext_resource type="Texture2D" uid="uid://dg0ypnrk8qkjn" path="res://Art/bomb_circle_3.png" id="3_6j81u"]
[ext_resource type="Texture2D" uid="uid://b6xr3b0wjurc5" path="res://Art/bomb_circle_4.png" id="4_q8fqh"]
[ext_resource type="Texture2D" uid="uid://biebh4f5x77ul" path="res://Art/bomb_explode.png" id="6_46li1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rk733"]
radius = 113.018

[sub_resource type="Animation" id="Animation_enrhl"]
resource_name = "Grow"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.6, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.6, 0.6)]
}

[sub_resource type="Animation" id="Animation_6hwc1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("circle_2_1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("circle_2_2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("circle_2_3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("circle_3:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("circle_4:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_w1dlq"]
resource_name = "Shrink"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("circle_1_1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("circle_1_2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("circle_2_1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("circle_2_2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("circle_2_3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("circle_3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("circle_4:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwmr4"]
_data = {
"Grow": SubResource("Animation_enrhl"),
"RESET": SubResource("Animation_6hwc1"),
"Shrink": SubResource("Animation_w1dlq")
}

[node name="bomb" type="Area2D" groups=["Straight", "Weapon"]]
z_index = 2
script = ExtResource("1_i2atx")

[node name="circle_1_1" type="Sprite2D" parent="."]
position = Vector2(-9, -6)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_3jjvp")

[node name="circle_1_2" type="Sprite2D" parent="."]
position = Vector2(-12, 8)
texture = ExtResource("1_3jjvp")

[node name="circle_2_1" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("2_6tedn")

[node name="circle_2_2" type="Sprite2D" parent="."]
position = Vector2(9, -4)
texture = ExtResource("2_6tedn")

[node name="circle_2_3" type="Sprite2D" parent="."]
position = Vector2(15, 4)
texture = ExtResource("2_6tedn")

[node name="circle_3" type="Sprite2D" parent="."]
position = Vector2(18, -9)
texture = ExtResource("3_6j81u")

[node name="circle_4" type="Sprite2D" parent="."]
position = Vector2(6, 10)
texture = ExtResource("4_q8fqh")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_46li1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_rk733")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nwmr4")
}
